--- a/templates/blog.html
+++ b/templates/blog.html
@@ -39,7 +39,7 @@
                                     href="">{{blog.category}}</a>
                                 <a class="text-body" href="">{{blog.upload_date}}</a>
                             </div>
-                            {{blog.article}}
+                            {{blog.article|safe}}
                         </div>
                         <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                             <div class="d-flex align-items-center">
