--- a/templates/components/news_card.html
+++ b/templates/components/news_card.html
@@ -16,8 +16,12 @@
         <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2" href="">{{ news.category }}</a>
         <a class="text-body" href=""><small>{{ news.publish_date }}</small></a>
       </div>
-      <a class="h4 d-block mb-3 text-secondary text-truncate-multiline text-uppercase font-weight-bold" href="{% url 'blog' news.slug %}">{{ news.title }}</a>
-      {% comment %} <p class="m-0 text-truncate-multiline">{{ news.article|safe }}</p> {% endcomment %}
+      <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="{% url 'blog' news.slug %}">
+        {{ news.title|truncatechars:20 }}{% if news.title|length > 50 %}...{% endif %}
+      </a>
+      <p class="m-0 text-truncate-multiline" style="-webkit-line-clamp: 2; display: -webkit-box; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis;">
+        {{ news.article|safe|truncatechars:60 }}{% if news.article|length > 120 %}...{% endif %}
+      </p>
     </div>
     <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
       <div class="d-flex align-items-center">
