--- a/templates/components/right_column.html
+++ b/templates/components/right_column.html
@@ -51,56 +51,19 @@
       <h4 class="m-0 text-uppercase font-weight-bold">Tranding News</h4>
     </div>
     <div class="bg-white border border-top-0 p-3">
+      {% for blog in trending_blogs %}
       <div class="d-flex align-items-center bg-white mb-3" style="height: 110px;">
-        <img class="img-fluid" src="{% static 'img/news-110x110-1.jpg' %}" alt="" />
+        <img class="img-fluid" src="{{ blog.image.url }}" style="width: 110px; height: 110px; object-fit: cover;" alt="" />
         <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
           <div class="mb-2">
-            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
-            <a class="text-body" href=""><small>Jan 01, 2045</small></a>
+            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">{{ blog.category.name }}</a>
+            <a class="text-body" href=""><small>{{ blog.created_at|date:"M d, Y" }}</small></a>
           </div>
-          <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
+          <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="{% url "blog" blog.slug %}">{{ blog.title|truncatechars:20 }}</a>
         </div>
       </div>
-      <div class="d-flex align-items-center bg-white mb-3" style="height: 110px;">
-        <img class="img-fluid" src="{% static 'img/news-110x110-2.jpg' %}" alt="" />
-        <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
-          <div class="mb-2">
-            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
-            <a class="text-body" href=""><small>Jan 01, 2045</small></a>
-          </div>
-          <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
-        </div>
-      </div>
-      <div class="d-flex align-items-center bg-white mb-3" style="height: 110px;">
-        <img class="img-fluid" src="{% static 'img/news-110x110-3.jpg' %}" alt="" />
-        <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
-          <div class="mb-2">
-            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
-            <a class="text-body" href=""><small>Jan 01, 2045</small></a>
-          </div>
-          <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
-        </div>
-      </div>
-      <div class="d-flex align-items-center bg-white mb-3" style="height: 110px;">
-        <img class="img-fluid" src="{% static 'img/news-110x110-4.jpg' %}" alt="" />
-        <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
-          <div class="mb-2">
-            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
-            <a class="text-body" href=""><small>Jan 01, 2045</small></a>
-          </div>
-          <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
-        </div>
-      </div>
-      <div class="d-flex align-items-center bg-white mb-3" style="height: 110px;">
-        <img class="img-fluid" src="{% static 'img/news-110x110-5.jpg' %}" alt="" />
-        <div class="w-100 h-100 px-3 d-flex flex-column justify-content-center border border-left-0">
-          <div class="mb-2">
-            <a class="badge badge-primary text-uppercase font-weight-semi-bold p-1 mr-2" href="">Business</a>
-            <a class="text-body" href=""><small>Jan 01, 2045</small></a>
-          </div>
-          <a class="h6 m-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
-        </div>
-      </div>
+      {% endfor %}
+      
     </div>
   </div>
   <!-- Popular News End -->
